# neqo

./: #113  .cirun.yml  .clippy.toml  .codecov.yml  .deny.toml  .dockerignore  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .rustfmt.toml  .taskcluster.yml  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  WEBTRANSPORT_IMPLEMENTATION_PLAN.md  check_internal_errors  clippy.toml  echo.py  update_version
fuzz/: Cargo.toml
fuzz/fuzz_targets/: addr_valid.rs  client_initial.rs  find_sni.rs  frame.rs  hframe.rs  hsettings.rs  packet.rs  priority.rs  qpack.rs  server_initial.rs  tparams.rs  wtframe.rs
fuzz/src/: lib.rs
mtu/: .clippy.toml  Cargo.toml  README.md  SECURITY.md  build.rs
mtu/src/: bsd.rs  lib.rs  linux.rs  routesocket.rs  windows.rs
mtu/src/bindings/: bsd.h  freebsd.rs  linux.h  linux.rs  macos.rs  netbsd.rs  openbsd.rs  solaris.rs
mtu/tests/: netns.rs
neqo-bin/: Cargo.toml  build.rs
neqo-bin/benches/: main.rs
neqo-bin/src/: lib.rs  send_data.rs  udp.rs
neqo-bin/src/client/: http09.rs  http3.rs  mod.rs  proxied_http3.rs  proxy.rs
neqo-bin/src/server/: firefox.rs  http09.rs  http3.rs  mod.rs  old_https.rs
neqo-client/: Cargo.toml
neqo-client/src/: main.rs
neqo-common/: Cargo.toml  build.rs
neqo-common/benches/: decoder.rs  timer.rs
neqo-common/src/: bytes.rs  chunk.rs  codec.rs  data.rs  datagram.rs  display.rs  event.rs  fuzz.rs  header.rs  headers.rs  hex.rs  hrtime.rs  incrdecoder.rs  json.rs  lib.rs  log.rs  once.rs  pool.rs  qlog.rs  readbuf.rs  socket.rs  timer.rs  tos.rs  udp.rs  varint.rs
neqo-common/tests/: log.rs
neqo-crypto/: .gitignore  Cargo.toml  TODO  build.rs  log  log1  log2  log3  min_version.rs  min_version.txt
neqo-crypto/bindings/: bindings.toml  nspr_error.h  nspr_time.h  nss_ciphers.h  nss_init.h  nss_p11.h  nss_ssl.h  nss_sslerr.h
neqo-crypto/src/: aead.rs  aead_awslc.rs  aead_fuzzing.rs  aead_null.rs  aead_rustcrypto.rs  agent.rs  agentio.rs  auth.rs  cert.rs  constants.rs  convert.rs  ecb.rs  ech.rs  err.rs  exp.rs  ext.rs  hkdf.rs  hp.rs  hpmask.rs  lib.rs  p11.rs  prio.rs  replay.rs  result.rs  secrets.rs  selfencrypt.rs  ssl.rs  time.rs
neqo-crypto/tests/: #agent.rs#  aead.rs  agent.rs  ecb.rs  ext.rs  handshake.rs  hkdf.rs  hp.rs  hpmask.rs  init.rs  selfencrypt.rs
neqo-helper/: Cargo.toml
neqo-helper/src/: lib.rs
neqo-http3/: Cargo.toml
neqo-http3-server/: Cargo.toml
neqo-http3-server/src/: main.rs  old_https.rs
neqo-http3/benches/: common.rs  streams.rs  streams_simulated.rs  streams_wallclock.rs  streams_walltime.rs
neqo-http3/src/: .response_stream.rs.swp  buffered_send_stream.rs  client_events.rs  conn_params.rs  connect_udp.rs  connection.rs  connection_client.rs  connection_server.rs  connection_test.rs  control_stream_local.rs  control_stream_remote.rs  hconnection.rs  headers_checks.rs  hframe.rs  lib.rs  priority.rs  push_control.rs  push_controller.rs  push_id.rs  push_stream.rs  qlog.rs  qpack_decoder_receiver.rs  qpack_encoder_receiver.rs  recv_message.rs  recvable.rs  request_stream_client.rs  request_stream_server.rs  request_target.rs  response_stream.rs  send_message.rs  server.rs  server_connection_events.rs  server_events.rs  settings.rs  stream_test.rs  stream_type_reader.rs  transaction_client.rs  transaction_server.rs  webtransport.rs  wt.rs  (+1 more)
neqo-http3/src/features/: mod.rs
neqo-http3/src/frames/: capsule.rs  connect_udp_frame.rs  hframe.rs  mod.rs  reader.rs  wtframe.rs
neqo-http3/src/transport/: mod.rs  test_stream.rs  test_transport.rs
neqo-http3/tests/: classic_connect.rs  connect_udp.rs  httpconn.rs  non_ascii_headers.rs  priority.rs  send_message.rs  webtransport.rs  wt.rs
neqo-http3/tests/common/: mod.rs
neqo-http3/tests/webtransport/: datagrams.rs  mod.rs  negotiation.rs  sessions.rs  streams.rs
neqo-interop/: Cargo.toml
neqo-interop/src/: main.rs
neqo-qpack/: Cargo.toml
neqo-qpack/src/: decoder.rs  decoder_instructions.rs  encoder.rs  encoder_instructions.rs  fuzz.rs  header_block.rs  header_read_buf.rs  huffman.rs  huffman_decode_helper.rs  huffman_table.rs  lib.rs  prefix.rs  qlog.rs  qpack_helper.rs  qpack_send_buf.rs  reader.rs  static_table.rs  stats.rs  table.rs
neqo-server/: Cargo.toml
neqo-server/src/: main.rs  old_https.rs
neqo-transport/: .gitignore  Cargo.toml  TODO
neqo-transport/benches/: frame_decode.rs  min_bandwidth.rs  pacer.rs  packet_codec.rs  range_tracker.rs  rx_stream_orderer.rs  rx_stream_orderer_comparison.rs  send_streams.rs  sent_packets.rs  transfer.rs  transfer_common.rs  transfer_once.rs  transfer_simulated.rs  transfer_wallclock.rs  transfer_walltime.rs
neqo-transport/db/: key4.db
neqo-transport/src/: #send_stream.rs#  ackrate.rs  addr_valid.rs  cc.rs  cid.rs  connection.rs  connection_parameters.rs  crypto.rs  data.rs  dump.rs  ecn.rs  events.rs  fc.rs  flow_mgr.rs  frame.rs  lib.rs  mtu.rs  nss.rs  nss_stub.rs  pace.rs  packet.rs  packet2.rs  path.rs  pmtud.rs  qlog.rs  quic_datagrams.rs  recovery.rs  recv_stream.rs  rtt.rs  rx_stream_orderer_heap.rs  saved.rs  scone.rs  send_stream.rs  sender.rs  server.rs  shuffle.rs  sni.rs  srt.rs  stateless_reset.rs  stats.rs  (+7 more)
neqo-transport/src/cc/: cc.rs  classic_cc.rs  classic_slow_start.rs  cubic.rs  hystart.rs  mod.rs  new_reno.rs  new_reno_cc.rs  new_reno_cubic.rs  search.rs
neqo-transport/src/connection/: dump.rs  idle.rs  mod.rs  params.rs  saved.rs  sock_puppet.rs  sockpuppet.rs  state.rs  (+2 more)
neqo-transport/tests/: conn_vectors.rs  connection.rs  network.rs  retry.rs  server.rs  sni.rs
neqo-udp/: Cargo.toml
neqo-udp/src/: lib.rs
test/: README.md  compare-lockfile.py  compare_lockfile.py  lockfile_utils.py  make-fuzz-corpus.sh  mozlog-neqo-cwnd.py  pyproject.toml  qvis.html  qvis.js  qvis.py  test-0rtt-cross-ip.sh  test.sh  update-lockfile.py  update-lockfile.sh  update_lockfile.py  upload_test.sh
test-fixture/: Cargo.toml
test-fixture/db/: cert9.db  key4.db  pkcs11.txt
test-fixture/src/: assertions.rs  bench.rs  header_protection.rs  lib.rs
test/ansible/: README.md  install.yml  inventory.ini  shrink.yml
(+205 files in other folders)
