[package]
name = "neqo-fuzz"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4" }
neqo-crypto = { path = "../neqo-crypto", features = ["fuzzing"] }
neqo-transport = { path = "../neqo-transport", features = ["fuzzing"] }

[lints]
workspace = true

[[bin]]
name = "packet"
path = "fuzz_targets/packet.rs"
test = false
doc = false
bench = false
