[package]
name = "fuzz"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
# Not used in Firefox, so we can be liberal with dependency versions
neqo-common = { path = "../neqo-common" }
neqo-crypto = { path = "../neqo-crypto" }
neqo-transport = { path = "../neqo-transport" }
test-fixture = { path = "../test-fixture" }

[target.'cfg(not(windows))'.dependencies]
libfuzzer-sys = { version = "0.4" } # default features are needed for fuzzer

[lints]
workspace = true

[[bin]]
name = "packet"
path = "fuzz_targets/packet.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame"
path = "fuzz_targets/frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_initial"
path = "fuzz_targets/client_initial.rs"
test = false
doc = false
bench = false

[[bin]]
name = "server_initial"
path = "fuzz_targets/server_initial.rs"
test = false
doc = false
bench = false
