[package]
name = "mtu"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.2.9"
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "Obtain the local network interface MTU towards a given IP address."
keywords = ["mozilla", "interface", "mtu"]
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[badges]
codecov = { repository = "mozilla/mtu", branch = "main" }
is-it-maintained-issue-resolution = { repository = "mozilla/mtu", branch = "main" }
is-it-maintained-open-issues = { repository = "mozilla/mtu", branch = "main" }
maintenance = { status = "actively-developed", branch = "main" }

[dependencies]
libc = { version = "0.2", default-features = false }
static_assertions = { version = "1.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = ">=0.58,<0.60", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
] }

[build-dependencies]
cfg_aliases = { version = "0.2", default-features = false }
mozbuild = { version = "0.1", default-features = false, optional = true }
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }

[features]
gecko = ["dep:mozbuild"]
