[package]
name = "neqo-bin"
description = "A basic QUIC HTTP/0.9 and HTTP/3 client and server."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "neqo-client"
path = "src/bin/client.rs"
bench = false

[[bin]]
name = "neqo-server"
path = "src/bin/server.rs"
bench = false

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
clap-verbosity-flag = { version = "3.0", default-features = false, features = ["log"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hex = { workspace = true, features = ["std"] }
log = { workspace = true }
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-http3 = { path = "./../neqo-http3" }
neqo-transport = { path = "./../neqo-transport" }
neqo-udp = { path = "./../neqo-udp" }
qlog = { workspace = true, optional = true }
quinn-udp = { workspace = true }
regex = { workspace = true, features = ["unicode-perl"] }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", default-features = false, features = ["net", "time", "macros", "rt"] }
url = { workspace = true }

[dev-dependencies]
criterion = { version = "0.6", default-features = false, features = ["async_tokio", "cargo_bench_support"] }
neqo-bin = { path = ".", features = ["draft-29"] }
neqo-http3 = { path = "./../neqo-http3", features = ["draft-29"] }
neqo-transport = { path = "./../neqo-transport", features = ["draft-29"] }
tokio = { version = "1", default-features = false, features = ["sync"] }

[features]
default = ["qlog"]
qlog = ["dep:qlog", "neqo-common/qlog", "neqo-transport/qlog", "neqo-http3/qlog"]
bench = ["neqo-bin/bench", "neqo-http3/bench", "neqo-transport/bench"]
fast-apple-datapath = ["quinn-udp/fast-apple-datapath"]
draft-29 = []

[package.metadata.cargo-machete]
ignored = ["log"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "main"
harness = false
required-features = ["bench"]
