[package]
name = "neqo-bin"
description = "A basic QUIC HTTP/0.9 and HTTP/3 client and server."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
autobenches = false

[[bin]]
name = "neqo-client"
path = "src/bin/client.rs"
bench = false

[[bin]]
name = "neqo-server"
path = "src/bin/server.rs"
bench = false

[lints]
workspace = true

[dependencies]
clap = { version = "4", default-features = false, features = [
        "std",
        "help",
        "usage",
        "error-context",
        "suggestions",
        "derive",
] }
clap-verbosity-flag = { version = "3", default-features = false, features = ["log"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hex = { workspace = true, features = ["std"] }
http = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
neqo-common = { path = "./../neqo-common" }
neqo-http3 = { path = "./../neqo-http3" }
neqo-transport = { path = "./../neqo-transport" }
neqo-udp = { path = "./../neqo-udp" }
nss-rs = { workspace = true }
qlog = { workspace = true }
quinn-udp = { workspace = true }
rustc-hash = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", default-features = false, features = ["net", "time", "macros", "rt"] }

[dev-dependencies]
criterion = { version = "4", package = "codspeed-criterion-compat", default-features = false, features = [
        "async_tokio",
] }
neqo-bin = { path = ".", features = ["draft-29"] }
tokio = { version = "1", default-features = false, features = ["sync"] }

[features]
bench = ["neqo-bin/bench", "neqo-http3/bench", "neqo-transport/bench", "log/release_max_level_info"]
fast-apple-datapath = ["quinn-udp/fast-apple-datapath"]
draft-29 = ["neqo-http3/draft-29", "neqo-transport/draft-29"]

[package.metadata.cargo-machete]
ignored = ["criterion"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[package.metadata.bench]]
name = "main"
codspeed.mode = "walltime" # Use "walltime" mode for "main" bench with codspeed.
codspeed.memory = false # FIXME: Disabled due to high variance in results.

[[bench]]
name = "main"
harness = false
required-features = ["bench"]
