[package]
name = "neqo-client"
description = "A basic QUIC HTTP/0.9 and HTTP/3 client."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3"
hex = "0.4.3"
log = { version = "0.4.17", default-features = false }
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-http3 = { path = "./../neqo-http3" }
neqo-qpack = { path = "./../neqo-qpack" }
neqo-transport = { path = "./../neqo-transport" }
qlog = "0.12.0"
tokio = { version = "1", features = ["net", "time", "macros", "rt", "rt-multi-thread"] }
url = "~2.5.0"

[features]
deny-warnings = []
