[package]
name = "neqo-common"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# Checked against https://searchfox.org/mozilla-central/source/Cargo.lock 2024-11-11
enum-map = { workspace = true }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "regex"] }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
log = { workspace = true }
qlog = { workspace = true }

[target."cfg(windows)".dependencies]
# Checked against https://searchfox.org/mozilla-central/source/Cargo.lock 2024-11-11
windows = { version = "0.58", default-features = false, features = ["Win32_Media"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
neqo-crypto = { path = "../neqo-crypto" }
test-fixture = { path = "../test-fixture" }
regex = { workspace = true }

[features]
bench = ["neqo-crypto/bench", "test-fixture/bench"]
build-fuzzing-corpus = ["hex"]
ci = []
test-fixture = []

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "decoder"
harness = false
required-features = ["bench"]
