[package]
name = "neqo-common"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
enum-map = { workspace = true }
env_logger = { version = "0.10", default-features = false }
hex = { workspace = true, optional = true }
log = { workspace = true }
qlog = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }

[target."cfg(windows)".dependencies]
windows = { workspace = true, features = ["Win32_Media"] }

[dev-dependencies]
criterion = { version = "0.6", default-features = false, features = ["cargo_bench_support"] }
neqo-crypto = { path = "../neqo-crypto" }
test-fixture = { path = "../test-fixture" }
regex = { workspace = true }

[features]
default = ["qlog"]
qlog = ["dep:qlog", "test-fixture/qlog"]
bench = ["neqo-crypto/bench", "test-fixture/bench", "log/release_max_level_info"]
build-fuzzing-corpus = ["hex/alloc"]
ci = []
test-fixture = []

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "decoder"
harness = false
required-features = ["bench"]
