[package]
name = "neqo-common"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
autobenches = false

[lints]
workspace = true

[dependencies]
enum-map = { workspace = true }
env_logger = { version = "0.10", default-features = false }
hex = { workspace = true, optional = true }
log = { workspace = true }
qlog = { workspace = true }
sha1 = { version = "0.10", default-features = false, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }

[target."cfg(windows)".dependencies]
windows = { workspace = true, features = ["Win32_Media"] }

[dev-dependencies]
criterion = { version = "4", package = "codspeed-criterion-compat", default-features = false }
test-fixture = { path = "../test-fixture" }

[features]
bench = ["test-fixture/bench", "log/release_max_level_info"]
build-fuzzing-corpus = ["hex/alloc", "sha1"]
ci = []
test-fixture = []

[package.metadata.cargo-machete]
ignored = ["criterion"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "decoder"
harness = false
required-features = ["bench"]
