[package]
name = "neqo-crypto"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
enum-map = { workspace = true }
log = { workspace = true }
neqo-common = { path = "../neqo-common" }
strum = { workspace = true}
thiserror = { workspace = true }

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
mozbuild = { version = "0.1", default-features = false, optional = true }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = { version = "0.5", default-features = false }

[dev-dependencies]
test-fixture = { path = "../test-fixture" }

[package.metadata.cargo-machete]
ignored = ["bindgen", "semver", "serde", "serde_derive", "toml"]

[features]
bench = []
disable-encryption = []
disable-random = []
gecko = ["mozbuild"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
