[package]
name = "neqo-crypto"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
enum-map = { workspace = true }
log = { workspace = true }
neqo-common = { path = "../neqo-common" }
strum = { workspace = true }
thiserror = { workspace = true }
# RustCrypto dependencies for pure-Rust crypto implementations
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
chacha20 = { version = "0.9", optional = true }

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
mozbuild = { version = "0.1", default-features = false, optional = true }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = { version = "0.5", default-features = false }

[dev-dependencies]
test-fixture = { path = "../test-fixture" }

[package.metadata.cargo-machete]
ignored = ["bindgen", "semver", "serde", "serde_derive", "toml"]

[features]
default = ["rustcrypto"]
bench = ["log/release_max_level_info"]
disable-encryption = []
disable-random = []
gecko = ["mozbuild"]
rustcrypto = ["aes-gcm", "chacha20poly1305", "aes", "chacha20"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
