[package]
name = "neqo-helper"
version = "0.6.7"
authors = ["Lars Eggert <lars@eggert.org>"]
edition = "2018"
rust-version = "1.65.0"
license = "MIT OR Apache-2.0"

[dependencies]
neqo-common = { path="./../neqo-common" }
nix = { version = "0.27.1", features = ["socket", "net", "uio"] }
log = {version = "0.4.0", default-features = false}
