[package]
name = "neqo-http3-server"
version = "0.1.14"
authors = ["Dragana Damjanovic <dragana.damjano@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
neqo-crypto = { version = "0.1", path = "./../neqo-crypto" }
neqo-transport = { version = "0.1", path = "./../neqo-transport" }
neqo-common = { version="0.1", path="./../neqo-common" }
neqo-http3 = { version = "0.1", path = "./../neqo-http3" }
structopt = "0.2.15"
mio = "0.6.17"
mio-extras = "2.0.5"
log = "0.4.0"

[features]
default = ["deny-warnings"]
deny-warnings = []
